# SWE-CARE

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: questionnaire-demo.md
scripts/: README.md  eval_benchmark.py  eval_report.py  print_eval_report_markdown_tables.py  run_eval_pipeline.py
src/swe_care/collect/: __main__.py  build_code_review_dataset.py  classify_prs_data.py  classify_review_comments.py  convert_to_rm_samples.py  evaluate_commits.py  get_graphql_prs_data.py  get_top_repos.py
src/swe_care/harness/: __main__.py  code_review_eval.py
src/swe_care/harness/evaluators/: code_review.py  repo_level.py  utils.py
src/swe_care/inference/: __main__.py  create_code_review_text.py  run_api.py
src/swe_care/schema/: collect.py  dataset.py  evaluation.py
src/swe_care/templates/: classify_problem_domain.yaml  classify_relevant_review_comment.yaml  classify_review_effort.yaml  code_review_llm_evaluation.yaml  code_review_llm_evaluation_user_prompt.j2  code_review_text_prompt.j2  code_review_text_prompt.yaml  estimate_difficulty.yaml  repo_level_evaluation.yaml  rm_sample.yaml
src/swe_care/templates/questionnaire/: llm_respondent.yaml  questionnaire.md.j2  questionnaire_schema.json
src/swe_care/utils/: bm25_retrieval.py  classify_code_review_tasks.py  estimate.py  extract_prs_data.py  file_source_retrieval.py  github.py  load.py  patch.py  prompt_loader.py  questionnaire.py  retrieval.py
src/swe_care/utils/github_graphql/: GetMergedPullRequests.graphql  GetReviewComments.graphql  GetReviews.graphql  GetSpecificPullRequest.graphql
src/swe_care/utils/llm_models/: __init__.py  clients.py
src/swe_reason_bench/: __init__.py
src/swe_reason_bench/collect/: __main__.py  build_code_review_dataset.py  evaluate_commits.py  get_graphql_prs_data.py  get_top_repos.py
src/swe_reason_bench/harness/: __main__.py  code_review_eval.py
src/swe_reason_bench/harness/evaluators/: __init__.py  code_review.py
src/swe_reason_bench/schema/: dataset.py
src/swe_reason_bench/utils/: extract_prs_data.py  github.py
