[project]
name = "swe-reason-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "友恒", email = "zhengxunjin.zx@antgroup.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
swe-reason-bench = "swe_reason_bench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
