[project]
name = "swe-care"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
authors = []
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.55.0",
    "dataclasses-json>=0.6.7",
    "jinja2>=3.1.0",
    "loguru>=0.7.2",
    "openai>=1.90.0",
    "requests[socks]>=2.31.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.9.0",
    "tqdm>=4.66.0",
    "unidiff>=0.7.5",
    "nltk>=3.9.1",
    "rank_bm25>=0.2.2",
    "gitpython>=3.1.45",
    "jedi>=0.19.2",
    "pyserini>=1.2.0",
    "httpx[socks]>=0.28.1",
    "chardet>=5.2.0",
    "jinja2>=3.1.6",
    "tree-sitter>=0.25.1",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
swe-care = "swe_care.collect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[[tool.uv.index]]
name = "default"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
